<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quiz_Title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp" />

    <!-- EditText for entering user's name -->
    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/name_hint"
        android:textSize="18sp"
        android:padding="16dp"
        android:textColor="@color/black"
        android:layout_marginBottom="50dp"/>

    <!-- Start button -->
    <Button
        android:id="@+id/startButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:textSize="40sp"
        android:padding="20dp"
        android:layout_marginTop="30dp" />
</LinearLayout>
